--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
-    <title>World</title>
+    
+    <title>New World</title>
 </head>
 <body>
-    <p>This is my new World</p>
+    <p>This is a new Feature</p>
 </body>
 </html>
