--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>New World</title>
 </head>
 <body>
-    <p>This is a new Feature</p>
+    <p>This is a new Feature (button)</p>
 </body>
 </html>
